# Silvaview-rs

./: .gitignore  ADMIN_ELEVATION.md  ADMIN_REQUIRED.md  Cargo.toml  DEBUG_TOOL.md  DIAGNOSTIC_CHANGES.md  MFT_DEBUGGING.md  PLAN.md  README.md  RECENT_CHANGES.md  TEXT_LABEL_FIX.md  TREEMAP_FIX_SUMMARY.md  build.rs  check-system-space.ps1  copy-code-only.py  ctm.txt  run-elevated.ps1  run-mft-test.ps1  sequoiaview-rs.exe.manifest  test-mft.bat  test-render.ps1
.claude/: settings.local.json
SequoiaView-rs-codeonly-02-14-26/: Cargo.txt
SequoiaView-rs-codeonly-02-14-26/src/: app.txt  lib.txt  main.txt
SequoiaView-rs-codeonly-02-14-26/src/layout/: mod.txt  squarify.txt
SequoiaView-rs-codeonly-02-14-26/src/render/: cushion.txt  mod.txt  scene.txt
SequoiaView-rs-codeonly-02-14-26/src/scanner/: elevation.txt  mft.txt  mod.txt  walk.txt
SequoiaView-rs-codeonly-02-14-26/src/tree/: mod.txt
fontdue/.git.embedded/: config  index  packed-refs
fontdue/.git.embedded/logs/refs/heads/: master
fontdue/.git.embedded/objects/pack/: pack-0c2def099eb244cdc152ba7f2f96959a94ab3cc8.idx  pack-0c2def099eb244cdc152ba7f2f96959a94ab3cc8.rev
fontdue/.git.embedded/refs/heads/: master
src/: app.rs  lib.rs  main.rs
src/layout/: mod.rs  squarify.rs
src/render/: colors.rs  cushion.rs  cushion_gpu.rs  mod.rs  scene.rs  text.rs
src/render/shaders/: cushion.wgsl
src/scanner/: mft.rs  types.rs
src/tree/: aggregate.rs  arena.rs  extensions.rs  mod.rs
src/ui/: config_dialog.rs  drives.rs  input.rs  mod.rs  navigation.rs  overlay.rs  tooltip.rs
vello/.git.embedded/: config  index  packed-refs
vello/.git.embedded/logs/refs/heads/: main
vello/.git.embedded/objects/pack/: pack-8df71047860f7fd6504381605981dff5af146dfa.idx  pack-8df71047860f7fd6504381605981dff5af146dfa.rev
vello/.git.embedded/refs/heads/: main
windows-rs-71/crates/libs/core/src/imp/: mod.rs  non_windows.rs
windows-rs-71/crates/libs/future/: Cargo.toml
windows-rs-71/crates/libs/future/src/: async_spawn.rs
