[package]
name = "sequoiaview-rs"
version = "0.1.0"
edition = "2021"
description = "Modern GPU-accelerated disk space visualizer using cushion treemaps"

[[bin]]
name = "sequoiaview-rs"
path = "src/main.rs"

[[bin]]
name = "debug-scan"
path = "src/bin/debug-scan.rs"

[[bin]]
name = "debug-layout"
path = "src/bin/debug-layout.rs"

[[bin]]
name = "validate-backend"
path = "src/bin/validate-backend.rs"

[dependencies]
# GPU rendering — use vello's re-exported wgpu to avoid version conflicts
vello = "0.4"
winit = "0.30"

# Filesystem scanning
jwalk = "0.8"
ntfs = "0.4"

# Windows APIs (MFT access)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_Foundation",
    "Win32_System_Ioctl",
    "Win32_System_SystemServices",
    "Win32_Security",
    "Win32_System_Threading",
]}

[dependencies.rayon]
version = "1.10"

[dependencies.compact_str]
version = "0.8"

[dependencies.anyhow]
version = "1"

[dependencies.tracing]
version = "0.1"

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]

[dependencies.bytemuck]
version = "1"
features = ["derive"]

[dependencies.pollster]
version = "0.4"

[dependencies.fontdue]
path = "fontdue"
features = ["simd"]

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = "thin"
