[package]
name = "silvaview-rs"
version = "0.3.0"
edition = "2021"
description = "Modern GPU-accelerated disk space visualizer using cushion treemaps"

[[bin]]
name = "Silvaview-rs"
path = "src/main.rs"

[dependencies]
# GPU rendering — local fork with texture override APIs enabled
vello = { path = "vello/vello" }
winit = "0.30"

# Filesystem scanning
jwalk = "0.8"
ntfs = "0.4"

# Windows APIs (MFT access)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_Foundation",
    "Win32_System_Ioctl",
    "Win32_System_SystemServices",
    "Win32_Security",
    "Win32_System_Threading",
]}

[dependencies.rayon]
version = "1.10"

[dependencies.compact_str]
version = "0.8"

[dependencies.anyhow]
version = "1"

[dependencies.tracing]
version = "0.1"

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]

[dependencies.bytemuck]
version = "1"
features = ["derive"]

[dependencies.pollster]
version = "0.4"

[dependencies.iced]
version = "0.13"
default-features = true

[dependencies.rfd]
version = "0.15"

[dependencies.skrifa]
version = "0.40"
features = ["std"]

[dependencies.sysinfo]
version = "0.33"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = "thin"
